<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" 
    tools:context=".Screen_3" >

    <TableRow
        android:layout_width="fill_parent"
    	android:layout_height="match_parent"
       	android:background="#555555"
       	android:gravity="center_horizontal"
       	 >
       	
        <TextView
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:textColor="#FFFFFF"
            android:text="@string/create_header" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
       	android:padding="5dp"
       	android:background="#222222"  >

		<TextView
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp" 
 			android:textStyle="bold"
            android:text="@string/compositionTitle" />
		
    </TableRow>
        
    <TableRow 
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/title"
            android:ems="14"
            android:hint="@string/title_hint"
            android:inputType="text|textCapWords" />
    </TableRow>

    <TableRow
        android:padding="5dp"
        android:layout_width="fill_parent"
    	android:layout_height="match_parent"
    	android:background="#222222" >

		<TextView
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp" 
            android:textStyle="bold"
            android:text="@string/timeSig"/>
    </TableRow>
    
    <TableRow
        android:padding="5dp"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"  >

        <Spinner
            android:layout_gravity="center"
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/meter_array"
            android:prompt="@string/meter_array_prompt" >
        </Spinner>
        
        <TextView 
            android:id="@+id/warn"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="12sp" />
    </TableRow>

      <TableRow
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
       	android:padding="5dp"
       	android:background="#222222"  >

		<TextView
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp" 
 			android:textStyle="bold"
            android:text="@string/tempo" />
		
    </TableRow>
    
    <TableRow 
        	android:layout_width="fill_parent"
        	android:layout_height="match_parent" >

        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_weight=".1">
            
            <NumberPicker
            android:id="@+id/numberPicker1"
            android:layout_width="50dip"
            android:layout_height="110dip"
            android:orientation="horizontal" />
        </LinearLayout>
        
        
    </TableRow>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:layout_gravity="bottom"
         >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:baselineAligned="false"
	    style="@android:style/Holo.ButtonBar"
	    android:orientation="horizontal"
	    android:layout_gravity="bottom"
	    android:layout_alignParentBottom="true" >
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" >

            <Button
                android:id="@+id/s2Next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s2Next" 
                style="@android:style/Holo.Light.ButtonBar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Holo.ButtonBar"
            android:layout_weight="0.05" >

            <Button
                android:id="@+id/cancel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@android:style/Holo.Light.ButtonBar" />
        </LinearLayout>
        
        </LinearLayout>
    </RelativeLayout>

</TableLayout>