<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.dit.dt211.mt.Screen_0"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/button1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:background="@drawable/about" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/about"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <ImageView
            android:id="@+id/img2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/ditlogo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/footnote"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_launcher" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            style="@android:style/Holo.Light.ButtonBar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/createnew"
            android:text="@string/createNewCompo"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button3"
            style="@android:style/Holo.Light.ButtonBar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/createnew"
            android:text="@string/listComposition"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button4"
            style="@android:style/Holo.Light.ButtonBar"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/createnew"
            android:text="@string/quitter"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>