<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5.0"
    tools:context=".Screen_5" >

    <LinearLayout 
        android:orientation="horizontal"
        android:id="@+id/S5L1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.5" >
        
        <TextView 
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/title"
            android:textSize="14sp"
            android:textColor="#888888"/>
        
        <TextView 
            android:id="@+id/s5Title"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:textSize="14sp"
            />

        
        <TextView 
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textDirection="ltr"
             android:textColor="#888888"
            android:text="@string/tempo"/>
        
        <TextView 
            android:id="@+id/s5Tempo"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:textDirection="ltr"
           />
        
        
        <TextView 
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:textDirection="ltr"
             android:textColor="#888888"
            android:text="@string/measure"/>
        
        <TextView 
            android:id="@+id/s5measure"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/S5L2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.2"
        android:padding="5dp" > 
        
		   <ie.dit.dt211.mt.MySurfaceView
		       android:id="@+id/surface3"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3" >

       	 <Button 
       	     android:id="@+id/s5BackButton"
       	     android:layout_width="wrap_content"
       	     android:layout_height="wrap_content"
       	     android:layout_centerInParent="true"
       	     android:text="@string/back"
       	     style="@android:style/Holo.Light.ButtonBar"/>
       	 	
    </RelativeLayout>

</LinearLayout>