<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    tools:context=".Screen_2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#555555"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/compo_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:textColor="#FFFFFF"
            android:text="@string/comp_details" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
       		android:background="#222222"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="16sp" 
 				android:textStyle="bold"
                android:text="@string/compositionTitle"/>
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/compo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />
        </TableRow>


        <TableRow
             android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
       		android:background="#222222" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="16sp" 
 				android:textStyle="bold"
                android:text="@string/timestamp"/>
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/compo_dateCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />
        </TableRow>

        
        <TableRow
             android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
       		android:background="#222222" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="16sp" 
 				android:textStyle="bold"
                android:text="@string/tempo"/>
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/compo_tempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />
        </TableRow>

        
        <TableRow
             android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
       		android:background="#222222" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="16sp" 
 				android:textStyle="bold"
                android:text="@string/timeSig"/>
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/compo_time_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               	android:padding="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="bottom" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
            	android:orientation="horizontal"
           	 	style="@android:style/Holo.ButtonBar" >
			
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                >

                <Button
                    android:id="@+id/viewScoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viewScore"
                     style="@android:style/Holo.Light.ButtonBar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03" >

                <Button
                    android:id="@+id/deleteScoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteScore"
                     style="@android:style/Holo.Light.ButtonBar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03" >

                <Button
                    android:id="@+id/s2backButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                     style="@android:style/Holo.Light.ButtonBar" />
            </LinearLayout>
            </LinearLayout>
            
        </LinearLayout>
    </TableLayout>

</LinearLayout>